# scspecies_package

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml
docs/: requirements.txt  requirenments.txt
docs/source/: conf.py  index.rst  installation.rst  scspecies.rst  tips.rst  tutorials  tutorials.rst
docs/source/api/: api.rst  scspecies.models.rst  scspecies.rst
docs/source/tutorials/: data_preprocessing.ipynb
scspecies/: requirements.txt
scspecies.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
